--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    width: 100%;
-    height: 100%;
-    font-family: poppins;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 header {
     display: flex;
     flex-direction: row;
@@ -25,7 +7,7 @@ header {
     height: 100px;
     background-color: rgba(222, 184, 135, 0.575);
     width: 100%;
-} 
+}
 
 nav {
     display: flex;
@@ -66,10 +48,12 @@ li {
     list-style-type: none;
     transition: all 0.3s;
 }
-li:nth-child(odd){
+
+li:nth-child(odd) {
     font-weight: 400;
 }
-li:hover{
+
+li:hover {
     font-size: x-large;
 
 }
@@ -91,55 +75,49 @@ li:hover{
     filter: contrast(5%);
 
 }
-img{
+
+img {
     width: 300px;
     height: 300px;
 }
 
-@media (max-width:700px) {
-    .logo {
-        display: none;
-    }
 
-    ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: large;
-    }
 
-    header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 10%;
-    }
-
-    nav {
-        justify-content: center;
-    }
-     main{
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         justify-content: space-around;
-     }
-}
-
-main{
+main {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: antiquewhite;
-    height: 80%;
+    height: 100%;
 }
+.bloco1{
+    width: 50%;
+    height: 100%;
+    display: flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.bloco2{
+    width: 50%;
+    height: 100%;
+    display: flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .flipcard {
     background-color: transparent;
     width: 300px;
     height: 300px;
     perspective: 1000px;
 }
+
 .conteudodedentro {
     position: relative;
     width: 100%;
@@ -147,28 +125,30 @@ main{
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flipcard:hover .conteudodedentro {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flipcard:hover .conteudodedentro {
     transform: rotateY(180deg);
-  }
-  
-  .conteudodafrente, .conteudodetras {
+
+}
+
+.conteudodafrente,
+.conteudodetras {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-  }
-  
-  .conteudodafrente {
+}
+
+.conteudodafrente {
     background-color: #bbb;
     color: black;
-    
-  }
-  
-  .conteudodetras {
+
+}
+
+.conteudodetras {
     background-color: #cab762;
     color: white;
     transform: rotateY(180deg);
@@ -176,56 +156,30 @@ main{
     flex-direction: column;
     text-align: center;
     justify-content: space-around;
-  }
-  
-  
-.card1{
-    width : 300px;
-    height : 100px;
 }
-.card2{
-    width : 300px;
-    height : 100px;
-   
+
+
+.card1 {
+    width: 300px;
+    height: 100px;
+}
+
+.card2 {
+    width: 300px;
+    height: 100px;
+
 }
 
 
 footer {
-    background-color:  rgba(222, 184, 135, 0.575);
+    background-color: rgba(222, 184, 135, 0.575);
     display: flex;
     flex-direction: column;
-    align-items:flex-end;
+    align-items: flex-end;
     width: 100%;
     font-size: small;
     padding-right: 50px;
-   padding-bottom: 10px;
-}
-
-span [data-descr] {
-    position: relative;
-    text-decoration: underline;
-    color: #00F;
-    cursor: help;
-}
-
-/* h5{
-    position:relative;
-} */
-span[data-descr]:hover::after {
-    content: attr(data-descr);
-    position: relative;
-    left: 35px;
-    right:50px;
-    top: 24px;
-    bottom:50px;
-    min-width: 50px;
-    border: 1px #aaaaaa solid;
-    background-color: #ffffccde;
-    padding: 12px;
-    color: #000000;
-    font-size: 14px;
-
-
+    padding-bottom: 10px;
 }
 
 h4::after {
